# rplusview

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  release.yml
docs/: PUBLISHING.md
rplusview/: __init__.py  __main__.py  app.py  config.py  github_client.py  odoo_task.py  rplusview.tcss  safe.py
rplusview/screens/: __init__.py  inbox.py
rplusview/widget/: __init__.py  action_bar.py  help_screen.py  setup_screen.py  status_bar.py  title_bar.py  vim_nav.py
scripts/: capture_screenshots.py
tests/: __init__.py  test_config.py  test_github_client.py  test_odoo_task.py  test_safe.py  test_smoke.py
